styles/bb_styles.css
html {
  font-size: 10px;
}
#headerUl > li > a {
  line-height: inherit;
}

#sidebar div.dateLI {
  position:absolute;
  top:1.25rem;
  right: 1rem;
  font-size: 1.2rem;
}

#name.resTitle {
/*  padding-bottom: 4px; */
  padding: 6px 0 9px 0;
}
#other li {
  min-height: 3rem;
}
.menuItems {
  list-style: none;
  padding-left: 0;
}
#rightMenuItems header {
  padding-left: 15px;
}

[data-type="list"] {
  padding: 0;
  background: #eee;
}

[data-type="list"] li p:first-of-type {
  font-size:1.6rem;
}
[data-type="list"] header {
  padding: 0.5rem 0rem;
}
[data-type="list"] .editList header {
  padding: 0.5rem 0rem 0.5rem 1rem;
}
[data-type="list"] li, #sidebar li.image_fitted {
  border-bottom: solid 1px #e3e3e3;
  height: 8rem;
  color: #606060;
}
/*
#headerDiv {
  line-height: 32px; 
}
*/
#name h4 {
  font-weight:normal;
/*  margin: 15px 0 7px 0; */
  font-size:2.3rem;
  color:#eee;
}
.hdr {
  width:100%;
  height:32px;
  padding: 6px 0;
}

#categories, .filterToggle {
  font-size:20px;
  background: #eee;
  border-radius: 1.5rem;
  padding: .2rem;
}
#headerUl  {
  display:block;
  max-width:100%;
  list-style:none;
  padding:0;
}

#headerUl s { color: #757575 }
#headerUl li {
  font-size:28px;
  float:left;
  text-align:center;
  margin:auto;
  cursor: pointer;
  height:100%;
}

#headerUl li i {
  font-size:2.8rem; 
}

#headerUl li:last-child {
  border-right: none;
}

[data-type="list"] li.u-noimg {
  cursor:pointer;
  padding:0.5rem;
  min-height:3.2rem;
}

#resourceView li, #cpView li {
  border-bottom: 1px solid #e3e3e3;
  padding: 0 10px;
}
#resourceView header, #cpView header {
  padding: 10px;
}
/*
#buttons {
  margin-top: -15px;
}
*/
#buttons h4 {
  margin-top: 0px;
}
button {
  border-radius: 1rem;
  font-size: 1.8rem;
  font-weight: bold;
}

#headerDiv h4 {
  padding-top: 5px; 
}

#headerButtons a[role="button"] {
  width: auto;
  height: 2.3rem;
  background: #fafafa url(buttons/images/ui/default.png) repeat-x left bottom / auto 100%;
  border: 1px solid #a6a6a6;
  font-size: 1rem;
  line-height: 2.3rem;
  border-radius: 0.5rem;
}
#mainGroup a[role="button"] {
  color: #333333;
  border-radius: 1rem;
  margin: 5px 0;
  position: relative;
  font-size: 1.8rem;
  padding: 1rem;
  text-align:left; 
  background:none;
  font-weight: 700;
  width: 90%;
  height: auto; 
}
#mainGroup div {
  height: 30px;
}
#mainGroup {
  width:50%; 
  float:right;
  overflow:hidden;
  /*
  max-width: 220px;
  min-width: 130px;
  */
}

#cpView > li[data-viewid] > a > p {
  padding-top: 0;
  margin: 0 1.5rem;
}
 
 #cpView > li[data-viewid] > p {
   padding-top: 0;
 }
 
#cpView > li[data-viewid] a {
  width: 100%;
  height: 100%;
}
.counter {
  position:absolute;
  margin-top:-1rem;
  font-size:1.4rem;
  
  height:3rem; 
  display:inline-block;
  
  background:#eee;
  right: 0;
  top: 0;
  padding: 1px 7px;
  border-radius:1rem;
  
}

section[data-type="sidebar"] {
  color: #cccccc;
  width: 21rem; 
  text-shadow: none;
}
section[data-type="sidebar"] > ul > li {
  border-bottom: 1px solid #000000;
}

[data-type="list"] header:before {
  border:none;
}

section[data-type="sidebar"] >  ul > header {
  position: relative;
  z-index: 10;
  height: 3rem;
  color: #333;
  background: #ddd; /*url(drawer/images/ui/header.png) repeat-x left bottom / 100% auto;*/
  font-family: Tahoma, Helvetica, Ariel, sans-serif;

  padding-top: 1rem;
  padding-left: 1.3rem;
  font-weight: normal;
  font-size: 18px; 
  line-height: 2rem;
  border-bottom: 1px solid #596068;
}

.acounter {
  float: right;
  position: relative;
  right: 20px;
  border-radius: 1rem;
  height: 50%;
  border: 1px solid #fff;
  font-size: 11px;
  font-weight: bold;
  padding: 0.2rem;
}

.mi {
  min-height:42px;
  font-size:18px;
  font-weight: normal; 
}

.mi1 {
  min-height:38px;
  max-width:100%;
  font-size:18px;
  margin-left:15px;
}

section[data-type="sidebar"]:after, #header section[role="region"] > header:first-child:after {
  background: none;
}
#sidebar div {
  font-size: 1.6rem;
}
#sidebar div.masonry-brick {
  cursor: pointer;
}
.home {
  float:right; 
  position:relative; 
  font-size: 22px;
  margin-top:-40px;
  margin-right:20px;
}

[data-type="list"] li > a {
  height: auto;
  color: #606060;
}

li label.ui-input-text, li label.select {
  font-size: 1.6rem;
  line-height: 3rem;
  display: inline-block;
  font-weight: 400;
  margin: 0 2% 0 0 ;
  overflow: visible;
/*  vertical-align: top; */
/*  width: 18%; */
}
/*
div.ui-input-text, input.ui-input-text {
  width: 78%;
  display: inline-block;
  position:relative;
  border-radius: 1rem
}
*/

div.ui-input-text, input.ui-input-text, textarea {
  width: 100%;
  display: block;
  position: relative;
  border-radius: 1rem;
  padding: 0.7rem;
  border: 1px solid #bbb;
  font-size: 1.6rem;
}

textarea {
  border-radius: 1rem;
  padding: 0.9rem 0 0 0.9rem;
}

div.ui-input-text input.ui-input-text {
  padding: 0.9rem 0 0 0.9rem;
}
fieldset {
  background: none;
}

#resourceView > li > p, #other > ul > li > p {
  margin: 0 1rem;
}

[data-type="list"] #cpView > li, #resourceView > li {
  min-height: 4rem; 
}
[data-type="list"] li {
  min-height: 6rem; 
  height: auto; 
  width:auto;
}
[class="scrollable"] {
  background: #f9f9f9;
}
.editList a {
  cursor:pointer;
}
._prim {
  padding: 0.5rem 1.5rem;
}
.resourceProp {
  padding: 1.5rem;
}
.editList li {
/*
  min-height: 2rem;
  padding: 0.5rem 1.5rem; 
*/ 
  min-height: 4rem;
  font-size: 1.6rem;
}

.editList select {
  border: 1px solid #bbb;
  padding: 0.5rem;
  font-size: 1.6rem;
  width: 100%;
}

@media all and (min-width:420px) {
  .editList select {
    width: 76%;
    border: 1px solid #bbb;
    padding: 0.5rem;
    font-size: 1.6rem;
  }
  li label.ui-input-text, li label.select {
    display: inline-block;
    width: 18%;
  }
  div.ui-input-text, input.ui-input-text, textarea {
    display: inline-block;
    width: 75%;
  }
}

fieldset div {
  margin: 1rem -.5px 0 -.5rem;
} 

label.pack-switch input + span {
  top: 60%;
}

fieldset#submitBtns {
  text-align:center;
  background:#d0d0d0;
  border:none;
  margin:0;
}
fieldset#submitBtns div {
  width:50%;
  display:inline-block;
}

fieldset#submitBtns div:first-child {
  float:left;
}

fieldset#submitBtns div:nth-child(2) {
  float:right;
}
fieldset#submitBtns div:nth-child(2) button {
  color: #fff;
  background: #333;
}
a {
  color: #606060;
}
#login_popup .popup {
  background: #ccc;
  border:1px solid #aaa; 
  border-radius:1rem;
}

.thumb-gal-header {
  border: 1px solid #707070;
  background: #eee;
  color: #f9f9f9;
  font-weight: 700;
  text-shadow: 0 1px 0 #000;
  background: #757575;
  text-align: center;
  top: -3px;
}
.thumb-gal-header h3 {
  font-size: 1.8rem;
  margin: 0.8rem;
}
.cpA {
  font-weight:normal;
  position:absolute;
  width:100%;
  height:100%;
}
.cp i {
  z-index:1001; 
  position:absolute;
  top:1rem;
  right:0.5rem;
  font-size:22px;
}
.listPage li > div {
  margin: 0.3rem;
  font-size: 1.6rem;
}
#login_popup li a[role="button"] {
  padding:0;
  width:99.5%;
  text-align:center;
  border-radius:1rem;
  font-weight:bold;
}
#login_popup li a[role="button"] span {
  margin-left: -1rem;
}

#login_popup li a[role="button"]:after {
  background:none;
}
#login_popup li {
  padding:0;
  border-bottom:none;
}
section#login_popup {
  background:#f9f9f9;position:absolute; top:5%; padding-top:0.5rem; border:1px solid #aaa; border-radius:1rem; z-index:1000000; width:auto;
}
#login_popup li a[role="button"] i {
  padding-top:0.7rem;
  margin-left:0.7rem;
}
#mvChooser {
  border: none;
}
#mvChooser ul {
  padding-left:0.1rem;
}
#mvChooser .listPage li {
  border-bottom: 1px solid #ccc;
  font-size: 1.5rem;
}
#rightMenuBtn {
  position: relative;
}
.menuBadge {
  left: 50%;
  top:  0.5rem;
}
/*
.resourceProp {
  font-size:1.6rem;
  cursor:pointer;
  min-height:3rem;
}
*/
.cameraCapture i {
  position:absolute;
  right:1rem;
  font-size:2.3rem;
  top:1.5rem;
  overflow:hidden;
}
/*
.commonLI {
  padding-left: 1rem;
}
*/
#sidebar .ui-li-count {
  float: right;
}
.u-desc a {
  text-decoration:underline;
  color: #16A085;
}
#headerButtons button {
  font-weight: normal;
}

.section .section-header:after {
  height: auto;
}

